--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
         <!-- best selling talako end  -->
 
     <!-- testimonial start  -->
-    <div class="bg-[#f1e8df] py-16 px-16 my-24">
+    <div class="bg-[#919191] py-16 px-16 my-24">
     <h1 class="text-center text-3xl text-[#282828] font-semibold tracking-wide">Testimonials</h1>
    
         <div class="swiper">
